--- a/index.html
+++ b/index.html
@@ -10,37 +10,39 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="header">
-      <h1 class="header__title">10,000+ of our users love our products.</h1>   
-      <p class="header__subtitle">We only provide great products combined with excellent customer service.See what our satisfied customers are saying about our services.</p>  
-    </header>
-    <section class="rates">
-      <article class="rated">
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <p class="rated__text">Rated 5 Stars in Reviews</p>
-      </article>
-      <article class="rated">
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <p class="rated__text">Rated 5 Stars in Report Guru</p>
-      </article>
-      <article class="rated">
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
-        <p class="rated__text">Rated 5 Stars in BestTech</p>
-      </article>
-    </section>
-    <section>
+    <div class="container">
+      <header class="header">
+        <h1 class="header__title">10,000+ of our users love our products.</h1>   
+        <p class="header__subtitle">We only provide great products combined with excellent customer service.See what our satisfied customers are saying about our services.</p>  
+      </header>
+      <section class="rates">
+        <article class="rated">
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <p class="rated__text">Rated 5 Stars in Reviews</p>
+        </article>
+        <article class="rated rated--second">
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <p class="rated__text">Rated 5 Stars in Report Guru</p>
+        </article>
+        <article class="rated rated--third">
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
+          <p class="rated__text">Rated 5 Stars in BestTech</p>
+        </article>
+      </section>
+    </div>
+    <section class="testimonials">
       <article class="testimonial">
         <header class="testimonial__header">
           <img src="images/image-colton.jpg" alt="Colton Smith" class="testimonial__image"/>
@@ -52,7 +54,7 @@
         <blockquote class="testimonial__text">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
         </blockquote>
       </article>
-      <article class="testimonial">
+      <article class="testimonial testimonial--second">
         <header class="testimonial__header">
           <img src="images/image-irene.jpg" alt="Irene Roberts" class="testimonial__image"/>
           <div class="testimonial__author">
@@ -63,7 +65,7 @@
         <blockquote class="testimonial__text">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
         </blockquote>
       </article>
-      <article class="testimonial">
+      <article class="testimonial testimonial--third">
         <header class="testimonial__header">
           <img src="images/image-anne.jpg" alt="Anne Wallace" class="testimonial__image"/>
           <div class="testimonial__author">
