--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">maxi83c</a>.
     </div>
