replace div with footer

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         </blockquote>
       </article>
     </section>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">maxi83c</a>.
-    </div>
+    </footer>
   </body>
 </html>
