remove unused classes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
           <p class="rated__text">Rated 5 Stars in Reviews</p>
         </article>
-        <article class="rated rated--second">
+        <article class="rated">
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
@@ -32,7 +32,7 @@
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
           <p class="rated__text">Rated 5 Stars in Report Guru</p>
         </article>
-        <article class="rated rated--third">
+        <article class="rated">
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
           <img src="images/icon-star.svg" class="rated__star" alt="rated star"/>
@@ -54,7 +54,7 @@
         <blockquote class="testimonial__text">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
         </blockquote>
       </article>
-      <article class="testimonial testimonial--second">
+      <article class="testimonial">
         <header class="testimonial__header">
           <img src="images/image-irene.jpg" alt="Irene Roberts" class="testimonial__image"/>
           <div class="testimonial__author">
@@ -65,7 +65,7 @@
         <blockquote class="testimonial__text">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
         </blockquote>
       </article>
-      <article class="testimonial testimonial--third">
+      <article class="testimonial">
         <header class="testimonial__header">
           <img src="images/image-anne.jpg" alt="Anne Wallace" class="testimonial__image"/>
           <div class="testimonial__author">
